--- a/views/doctor.html
+++ b/views/doctor.html
@@ -1,25 +1,26 @@
 <div class="container mt-5">
     <h2>Doctor's Profile</h2>
     <div class="row">
-        <div class="col-md-12 container doctor-profile-container mt-5">
+        <div class="col-md-12 container-fluid mt-5">
             <div class="card">
                 <div class="card-header">
                     <h4>Patients</h4>
                 </div>
                 <div class="card-body">
-                    <table id="patientsTable" class="display">
-                        <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Name</th>
-                                <th>Appointment Date</th>
-                                <th>Time</th>
-                                <th>Actions</th>
-
-                            </tr>
-                        </thead>
-                        <tbody></tbody>
-                    </table>
+                    <div class="table-responsive">
+                        <table id="patientsTable" class="display">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Name</th>
+                                    <th>Appointment Date</th>
+                                    <th>Time</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
