--- a/views/doctor.html
+++ b/views/doctor.html
@@ -4,7 +4,7 @@
         <div class="col-md-12 container-fluid mt-5">
             <div class="card">
                 <div class="card-header">
-                    <h4>Patients</h4>
+                    <h4>Appointments</h4>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
@@ -12,9 +12,9 @@
                             <thead>
                                 <tr>
                                     <th>ID</th>
-                                    <th>Name</th>
-                                    <th>Appointment Date</th>
+                                    <th>Date</th>
                                     <th>Time</th>
+                                    <th>Service</th>
                                     <th>Actions</th>
                                 </tr>
                             </thead>
@@ -26,6 +26,7 @@
         </div>
     </div>
 </div>
+
 
 <div id="editTreatmentModal" class="custom-modal d-none">
     <div class="custom-modal-content">
