--- a/views/viewProfile.html
+++ b/views/viewProfile.html
@@ -34,6 +34,7 @@
                             <th>ID</th>
                             <th>Date</th>
                             <th>Time</th>
+                            <th>Service</th>
                             <th>Doctor</th>
                             <th>Actions</th>
                         </tr>
