--- a/frontend/views/doctor.html
+++ b/frontend/views/doctor.html
@@ -12,6 +12,7 @@
                             <thead>
                                 <tr>
                                     <th>ID</th>
+                                    <th>Patient</th>
                                     <th>Date</th>
                                     <th>Time</th>
                                     <th>Service</th>
@@ -89,4 +90,4 @@
 </div>
 
 
-<script>dataTableService.loadPatients();</script>
+<script>dataTableService.loadPatients(23, 'scheduled');</script>
