--- a/frontend/views/viewProfile.html
+++ b/frontend/views/viewProfile.html
@@ -17,10 +17,14 @@
                     <div class="mt-3 text-center">
                         <a id="editProfileButton" class="btn btn-warning" onclick="modalService.openModal('editProfileModal')">Edit Profile</a>
                     </div>
+                    <div class="mt-3 text-center">
+                        <a id="changePasswordButton" class="btn btn-danger" onclick="modalService.openModal('changePasswordModal')">Change Password</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
 
     <div class="mt-4">
         <div class="card">
@@ -57,8 +61,12 @@
         <div class="custom-modal-body">
             <form id="editProfileForm">
                 <div class="form-group">
-                    <label for="name">Full Name</label>
-                    <input type="text" class="form-control" id="name" value="John Smith">
+                    <label for="firstName">First Name</label>
+                    <input type="text" class="form-control" id="firstName" value="John">
+                </div>
+                <div class="form-group">
+                    <label for="lastName">Last Name</label>
+                    <input type="text" class="form-control" id="lastName" value="Smith">
                 </div>
                 <div class="form-group">
                     <label for="email">Email Address</label>
@@ -81,6 +89,35 @@
     </div>
 </div>
 
+<div id="changePasswordModal" class="custom-modal d-none">
+    <div class="custom-modal-content">
+        <div class="custom-modal-header">
+            <h5 class="modal-title">Change Password</h5>
+            <button type="button" class="close" onclick="modalService.closeModal('changePasswordModal')">&times;</button>
+        </div>
+        <div class="custom-modal-body">
+            <form id="changePasswordForm">
+                <input type="hidden" id="patientId" value="123">
+                <div class="form-group">
+                    <label for="currentPassword">Current Password</label>
+                    <input type="password" class="form-control" id="currentPassword" placeholder="Enter current password" required>
+                </div>
+                <div class="form-group">
+                    <label for="newPassword">New Password</label>
+                    <input type="password" class="form-control" id="newPassword" placeholder="Enter new password" required>
+                </div>
+                <div class="form-group">
+                    <label for="confirmPassword">Confirm New Password</label>
+                    <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm new password" required>
+                </div>
+            </form>
+        </div>
+        <div class="custom-modal-footer">
+            <button type="button" class="btn btn-secondary" onclick="modalService.closeModal('changePasswordModal')">Close</button>
+            <button type="button" class="btn btn-primary" onclick="passwordService.changePassword()">Save Changes</button>
+        </div>
+    </div>
+</div>
 
 <div id="cancelAppointmentModalPatient" class="custom-modal d-none">
     <div class="custom-modal-content">
@@ -133,8 +170,8 @@
         <div class="custom-modal-body">
             <p><strong>Diagnosis:</strong> <span id="diagnosisDetails"></span></p>
             <p><strong>Prognosis:</strong> <span id="prognosisDetails"></span></p>
-            <p><strong>Additional Notes:</strong></p>
-            <p id="notesDetails"></p>
+            <p><strong>Prescription:</strong></p>
+            <p id="prescriptionDetails"></p>
         </div>
         <div class="custom-modal-footer">
             <button type="button" class="btn btn-secondary" onclick="modalService.closeModal('viewDetailsModal')">Close</button>
@@ -172,6 +209,6 @@
 </div>
 
 <script>
-    medicalHistory.loadMedicalHistory();
-    dataTableService.loadAppointments();
+    medicalHistory.loadMedicalHistory(3);
+    dataTableService.loadAppointments(3);
 </script>
