--- a/frontend/views/landingPage.html
+++ b/frontend/views/landingPage.html
@@ -7,7 +7,7 @@
                 </p>
                 <p class="row sideP">Lorem ipsum dolor sit amet, consectetur adipiscing elit velit, sapien habitant integer senectus malesuada ac.</p>
                 <div class="row">
-                    <a href="#login"><button type="button" id="services-book-btn" class="dark-theme-button btn btn-primary col-sm-5 p-4 m-2">Book an appointment</button></a>
+                    <a  onclick="redirectBooking()"><button type="button" id="services-book-btn" class="dark-theme-button btn btn-primary col-sm-5 p-4 m-2">Book an appointment</button></a>
                    <a href="#services"><button type="button" class="btn col-sm-3 my-button lightBlueText p-4 m-2">Browse services</button></a>
                 </div>
             </div>
@@ -42,3 +42,10 @@
         </div>
     </div>
 </div>
+
+<script>
+    function redirectBooking(){
+        window.location.hash = localStorage.getItem('user_token')? "#bookAppointment": "#login";
+        location.reload();
+    }
+</script>
